--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="hover:underline">Home</a></li>
                 <li><a href="logs.html" class="hover:underline">Logs</a></li>
+                <li><a href="admin.html" class="hover:underline">Admin</a></li>
             </ul>
         </nav>
 
