--- a/logs.html
+++ b/logs.html
@@ -47,6 +47,7 @@
         <ul class="flex space-x-4">
             <li><a href="index.html" class="hover:underline">Home</a></li>
             <li><a href="logs.html" class="hover:underline font-semibold">Logs</a></li>
+            <li><a href="admin.html" class="hover:underline">Admin</a></li>
         </ul>
     </nav>
 
